<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jai</groupId>
	<artifactId>searchanalytics-bigdata</artifactId>
	<version>1.0</version>

	<name>Search Analyticsusing Bigdata</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jackson.version>1.9.3</jackson.version>
		<fastxml.jackson.version>2.3.0-rc1</fastxml.jackson.version>
		<flume.version>1.4.0</flume.version>
		<hive.version>0.12.0-cdh5.0.0</hive.version>  
		<!-- <hive.version>0.12.0</hive.version>  -->
		<!-- <hadoop.version>2.4.0</hadoop.version> -->
		<hadoop.version>2.3.0-cdh5.0.0</hadoop.version>
		<hadoop.mr1.version>2.3.0-mr1-cdh5.0.0</hadoop.mr1.version>
		<log4j.version>1.2.16</log4j.version>
		<slf4j.version>1.7.5</slf4j.version>
	</properties>
	<repositories>
		<repository>
			<id>cloudera-releases</id>
			<url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.elasticsearch</groupId>
			<artifactId>elasticsearch</artifactId>
			<!-- <version>0.90.10</version> -->
			<version>1.1.0</version>
		</dependency>
		<!-- <dependency> <groupId>com.google.collections</groupId> <artifactId>google-collections</artifactId> 
			<version>1.0</version> </dependency> -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
			<version>${slf4j.version></version> </dependency> <dependency> <groupId>org.apache.logging.log4j</groupId> 
			<artifactId>log4j-api</artifactId> <version>${log4j.version}</version> </dependency> 
			<dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-1.2-api</artifactId> 
			<version>${log4j.version}</version> </dependency> <dependency> <groupId>org.apache.logging.log4j</groupId> 
			<artifactId>log4j-core</artifactId> <version>${log4j.version}</version> </dependency> 
			<dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-flume-ng</artifactId> 
			<version>${log4j.version}</version> </dependency> -->
		<!-- <dependency> <groupId>org.apache.logging.log4j</groupId> <artifactId>log4j-slf4j-impl</artifactId> 
			<version>${log4j.version}</version> </dependency> <dependency> <groupId>org.apache.logging.log4j</groupId> 
			<artifactId>log4j-jcl</artifactId> <version>${log4j.version}</version> </dependency> -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-xc</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>4.0.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>4.0.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>4.0.3.RELEASE</version>
		</dependency>
		<!-- Jackson dependencies -->
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${fastxml.jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-json-org</artifactId>
			<version>${fastxml.jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${fastxml.jackson.version}</version>
		</dependency>
		<!-- <dependency> <groupId>org.apache.flume</groupId> <artifactId>flume-ng-sdk</artifactId> 
			<version>${flume.version}</version> <exclusions> <exclusion> <artifactId>guava</artifactId> 
			<groupId>com.google.guava</groupId> </exclusion> <exclusion> <artifactId>org.slf4j</artifactId> 
			<groupId>slf4j-log4j</groupId> </exclusion> <exclusion> <artifactId>log4j</artifactId> 
			<groupId>log4j</groupId> </exclusion> </exclusions> </dependency> <dependency> 
			<groupId>org.apache.flume</groupId> <artifactId>flume-ng-core</artifactId> 
			<version>${flume.version}</version> <exclusions> <exclusion> <artifactId>slf4j-log4j12</artifactId> 
			<groupId>org.slf4j</groupId> </exclusion> <exclusion> <artifactId>log4j</artifactId> 
			<groupId>log4j</groupId> </exclusion> </exclusions> </dependency> <dependency> 
			<groupId>org.apache.flume.flume-ng-channels</groupId> <artifactId>flume-file-channel</artifactId> 
			<version>${flume.version}</version> </dependency> <dependency> <groupId>org.apache.flume</groupId> 
			<artifactId>flume-ng-node</artifactId> <version>${flume.version}</version> 
			<exclusions> <exclusion> <artifactId>org.slf4j</artifactId> <groupId>slf4j-log4j</groupId> 
			</exclusion> <exclusion> <artifactId>log4j</artifactId> <groupId>log4j</groupId> 
			</exclusion> <exclusion> <artifactId>slf4j-log4j12</artifactId> <groupId>org.slf4j</groupId> 
			</exclusion> </exclusions> </dependency> -->
		<dependency>
			<groupId>org.apache.flume</groupId>
			<artifactId>flume-ng-embedded-agent</artifactId>
			<version>${flume.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.flume</groupId>
			<artifactId>flume-ng-configuration</artifactId>
			<version>${flume.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>org.slf4j</artifactId>
					<groupId>slf4j-log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>slf4j-log4j12</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.flume.flume-ng-sinks</groupId>
			<artifactId>flume-ng-elasticsearch-sink</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.flume.flume-ng-sinks</groupId>
			<artifactId>flume-hdfs-sink</artifactId>
			<version>1.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-common</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-serde</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-metastore</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-jdbc</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-service</artifactId>
			<version>${hive.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-testutils</artifactId>
			<version>${hive.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-common</artifactId>
			<version>${hadoop.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-hdfs</artifactId>
			<version>${hadoop.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-auth</artifactId>
			<version>${hadoop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-client</artifactId>
			<version>${hadoop.mr1.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-core</artifactId>
			<version>${hadoop.mr1.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-test</artifactId>
			<version>${hadoop.mr1.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-minicluster</artifactId>
			<version>${hadoop.mr1.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-hadoop</artifactId>
			<version>1.0.2.RELEASE-hadoop22</version>
		</dependency>
		<!-- 
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-yarn-boot</artifactId>
			<version>2.0.0.RC2-cdh5</version>
		</dependency>
		 -->
		<!-- -->
		<dependency>
			<groupId>jdk.tools</groupId>
			<artifactId>jdk.tools</artifactId>
			<version>1.7</version>
			<scope>system</scope>
			<systemPath>/usr/java/jdk1.7.0_51/lib/tools.jar</systemPath>
		</dependency>
		<!-- Testing dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.14.1</version>
					<configuration>
						<argLine>-Xmx512m -Xms256m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<url>http://jaibeermalik.wordpress.com/category/tech-stuff/elasticsearch/</url>
	<organization>
		<name>Jaibeer Malik</name>
		<url>http://jaibeermalik.wordpress.com</url>
	</organization>
</project>